配置webapp环境