@@ -17,6 +17,12 @@
             <artifactId>coderfun-service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>coderfun</groupId>
+            <artifactId>coderfun-base-jfinal</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -29,6 +35,7 @@
                 <configuration>
                     <stopKey>stop</stopKey>
                     <stopPort>5599</stopPort>
+                    <jvmArgs>-Xmx1024m -Xms256m -XX:PermSize=256M -XX:MaxPermSize=512M</jvmArgs>
                     <webAppConfig>
                         <contextPath>/</contextPath>
                         <!--<webDefaultXml>webdefault.xml</webDefaultXml>-->
